Fix border-spacing

--- a/src/daterangepicker/daterangepicker.component.scss
+++ b/src/daterangepicker/daterangepicker.component.scss
@@ -123,6 +123,7 @@ $md-drppicker-cell-border-size: 1px !default;
 
         table {
             border-spacing: 2px;
+            border-collapse: separate;
         }
     }
 
